--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-    <title>Posterwall App</title>
+    <title>Twibbon App</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="description" content="Posterwall adalah sebuah bingkai foto yang dibuat dan didesain sedemikian rupa dalam berbagai jenis dan ukuran, sering digunakan sebagai tanda keikutsertaan sebuah acara, dukungan, promosi, dan bentuk lainnya.">
+    <meta name="description" content="Twibbon adalah sebuah bingkai foto yang dibuat dan didesain sedemikian rupa dalam berbagai jenis dan ukuran, sering digunakan sebagai tanda keikutsertaan sebuah acara, dukungan, promosi, dan bentuk lainnya.">
     <meta name="author" content="Ferry Ayunda">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
@@ -23,10 +23,10 @@
     <div id="preloader">
     <div id="status">&nbsp;</div>
     </div>
-    <h1>Posterwall App</h1>
-    <p>Posterwall App adalah sebuah bingkai foto yang dibuat dan didesain sedemikian rupa dalam berbagai jenis dan ukuran, sering digunakan sebagai tanda keikutsertaan sebuah acara, dukungan, promosi, dan bentuk lainnya.</p>
+    <h1>Twibbon App</h1>
+    <p>Twibbon App adalah sebuah bingkai foto yang dibuat dan didesain sedemikian rupa dalam berbagai jenis dan ukuran, sering digunakan sebagai tanda keikutsertaan sebuah acara, dukungan, promosi, dan bentuk lainnya.</p>
     <div id="app"></div>
-    <p><em><strong>Bagikan</strong></em> Twibbon ini ke media sosial Anda.</p>
+    <p><em><strong>Bagikan</strong></em> Twibbon app ini ke media sosial Anda.</p>
     <p class="result"></p>
     <br>
     <p class="copyright"><span>Posterwall by Ferry Ayunda </span><a href="#" target="_blank" class="posterwall"></a></p>
