--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Twibbon App adalah sebuah bingkai foto yang dibuat dan didesain sedemikian rupa dalam berbagai jenis dan ukuran, sering digunakan sebagai tanda keikutsertaan sebuah acara, dukungan, promosi, dan bentuk lainnya.">
     <meta name="author" content="Ferry Ayunda">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="https://bera.pages.dev/og.png" />
     
     <link rel="stylesheet" href="css/index.css">
     <!-- <link rel="stylesheet" href=""> -->
