--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p><em><strong>Bagikan</strong></em> Twibbon app ini ke media sosial Anda.</p>
     <p class="result"></p>
     <br>
-    <p class="copyright"><span>Posterwall by Ferry Ayunda </span><a href="https://github.com/kisahklasik" target="_blank" class="posterwall"></a></p>
+    <p class="copyright"><span>Twibbon App by Ferry Ayunda </span><a href="https://github.com/kisahklasik" target="_blank" class="posterwall"></a></p>
 </main>
     <script src="src/js/share.js"></script>
     <script src=""></script>
