--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Example Domain</title>
+    <title>404 Page Not Found</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -37,9 +37,7 @@
 
 <body>
 <div>
-    <h1>Example Domain</h1>
-    <p>This domain is for use in illustrative examples in documents. You may use this
-    domain in literature without prior coordination or asking for permission.</p>
+    <h1>Page Not Found</h1>
     <p><a href="https://www.iana.org/domains/example">More information...</a></p>
 </div>
 </body>
