--- a/404.html
+++ b/404.html
@@ -38,6 +38,7 @@
 <body>
 <div>
     <h1>Page Not Found</h1>
+    <p>Sorry, but the page you requested has not been found</p>
     <p><a href="https://www.iana.org/domains/example">More information...</a></p>
 </div>
 </body>
