--- a/404.html
+++ b/404.html
@@ -38,8 +38,8 @@
 <body>
 <div>
     <h1>Page Not Found</h1>
-    <p>Sorry, but the page you requested has not been found</p>
-    <p><a href="https://www.iana.org/domains/example">More information...</a></p>
+    <p>Sorry, but the page you requested has not been found.</p>
+    <p>Alternatively, you can go to <a href="http://www.website.com">my home page</a> or <a href="http://www.website.com/archives">browse my archives</a></p>
 </div>
 </body>
 </html>
