--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
 <div>
     <h1>Page Not Found</h1>
     <p>Sorry, but the page you requested has not been found.</p>
-    <p>Alternatively, you can go to <a href="https://bera.pages.dev/">my home page</a> or <a href="http://www.website.com/archives">browse my archives</a></p>
+    <p>Alternatively, you can go to <a href="https://bera.pages.dev/">my home page</a> or <a href="https://github.com/kisahklasik">browse my archives</a>.</p>
 </div>
 </body>
 </html>
