--- a/404.html
+++ b/404.html
@@ -39,6 +39,8 @@
 <div>
     <h1>Page Not Found</h1>
     <p>Sorry, but the page you requested has not been found.</p>
+    <p>We're very sorry, but the page you requested has not been found! It may have been moved or deleted.</p>
+    <p>I'm not blaming you, but have you checked your address bar? There might be a typo in the URL.</p>
     <p>Alternatively, you can go to <a href="https://bera.pages.dev/">my home page</a> or <a href="https://github.com/kisahklasik">browse my archives</a>.</p>
 </div>
 </body>
