--- a/404.html
+++ b/404.html
@@ -6,6 +6,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="canonical" href="https://bera.pages.dev/" />
+    <link rel="icon" href="favicon.ico">
+    
     <style type="text/css">
     body {
         background-color: #f0f0f2;
