--- a/demo.html
+++ b/demo.html
@@ -1,1 +1,12 @@
-<div style="width: 600px; margin-top: 50px; margin-left: auto; margin-right: auto;"> <p><strong>SITUS DIBLOKIR</strong></p><blockquote> <p>Undang-undang RI Nomor 19 Tahun 2016 Pasal 40 (2a) dan (2b) Tentang Informasi dan Transaksi Elektronik</p></blockquote> <p>Maaf, akses ke situs ini diblokir oleh Pemerintah Indonesia</p><p>Karena Mengandung Konten Negatif</p><p>Yang Melanggar Peraturan Perundangan di Indonesia</p><p>Hubungi:<br/> Aduankonten@mail.kominfo.go.id</p><p>KOMINFO -XL Axiata</p><p><br/> <strong>WEBSITE BLOCKED</strong></p><blockquote> <p>Indonesia Law No.19 year 2016 article 40(2a) regarding Information and Electronic Transaction</p></blockquote> <p>Sorry, access to this website been denied by The Government of Indonesia due to negative content as it violates Indonesia Law</p><p>Contact</p><p>Aduankonten@mail.kominfo.go.id</p><p>KOMINFO - XL Axiata</p></div>
+<div style="width: 600px; margin-top: 50px; margin-left: auto; margin-right: auto;"> 
+<p><strong>SITUS DIBLOKIR</strong></p>
+<blockquote> <p>Undang-undang RI Nomor 19 Tahun 2016 Pasal 40 (2a) dan (2b) Tentang Informasi dan Transaksi Elektronik</p></blockquote> 
+<p>Maaf, akses ke situs ini diblokir oleh Pemerintah Indonesia</p>
+  <p>Karena Mengandung Konten Negatif</p>
+  <p>Yang Melanggar Peraturan Perundangan di Indonesia</p>
+  <p>Hubungi:<br/> Aduankonten@mail.kominfo.go.id</p>
+  <p>KOMINFO -XL Axiata</p>
+  <p><br/> <strong>WEBSITE BLOCKED</strong></p>
+  <blockquote> <p>Indonesia Law No.19 year 2016 article 40(2a) regarding Information and Electronic Transaction</p></blockquote> 
+  <p>Sorry, access to this website been denied by The Government of Indonesia due to negative content as it violates Indonesia Law</p>
+  <p>Contact</p><p>Aduankonten@mail.kominfo.go.id</p><p>KOMINFO - XL Axiata</p></div>
