--- a/pages.html
+++ b/pages.html
@@ -4,7 +4,11 @@
    <meta charset="utf-8">
    <title>New Repo /maps - Free Full-Screen Interactive Beer Maps w/ Brewery Listings - Jekyll Minimal Theme</title>
    <link rel="stylesheet" type="text/css" href="css/style.css" >
-   <link rel="alternate" type="application/atom+xml" href="/jekyll-minimal-theme/feed.xml" title="News Feed">
+   
+   <link rel="canonical" href="https://bera.pages.dev/" />
+   <link rel="icon" href="favicon.ico">
+    
+    <script src="src/js/app.js"></script>
 </head>
 <body>
 
