--- a/pages.html
+++ b/pages.html
@@ -8,7 +8,8 @@
    <link rel="canonical" href="https://bera.pages.dev/" />
    <link rel="icon" href="favicon.ico">
     
-    <script src="src/js/app.js"></script>
+   <script src="src/js/app.js"></script>
+   <script src="src/js/index.js"></script>
 </head>
 <body>
 
