--- a/pages.html
+++ b/pages.html
@@ -45,5 +45,15 @@ live or <a href="https://github.com/openbeer/maps">check the source using</a> th
 </div>
 
 </div><!-- .container -->
+<script src="src/js/share.js"></script>
+<script src=""></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script>
+$(window).on('load', function() { // makes sure the whole site is loaded 
+$('#status').fadeOut(); // will first fade out the loading animation 
+$('#preloader').delay(350).fadeOut('slow'); // will fade out the white DIV that covers the website. 
+$('body').delay(350).css({'overflow':'visible'});
+})
+</script>
 </body>
 </html>
