--- a/contoh.html
+++ b/contoh.html
@@ -20,7 +20,7 @@
             margin: auto;
             overflow: hidden;
             width: 600px;
-            height: 550px
+        //    height: 550px
         }
         footer {
             position: absolute;
@@ -28,7 +28,19 @@
             right: 0;
             text-transform: uppercase;
             padding: 10px;
-            font-family:Lato,sans-serif}footer p{letter-spacing:3px;font-size:10px}footer a{color:#aaa;text-decoration:none}footer a:hover{color:#7d7d7d}
+            font-family: Lato,sans-serif
+        }
+        footer p {
+            letter-spacing: 3px;
+            font-size: 10px
+        }
+        footer a {
+            color: #aaa;
+            text-decoration: none
+        }
+        footer a:hover{
+            color: #7d7d7d
+        }
     </style>    
 </head>
 
