--- a/contoh.html
+++ b/contoh.html
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-<div>
+<div class="container">
     <h1>Example Domain</h1>
     <p>This domain is for use in illustrative examples in documents. You may use this
     domain in literature without prior coordination or asking for permission.</p>
