--- a/contoh.html
+++ b/contoh.html
@@ -46,10 +46,13 @@
 
 <body>
 <div class="container">
-    <h1>Example Domain</h1>
-    <p>This domain is for use in illustrative examples in documents. You may use this
-    domain in literature without prior coordination or asking for permission.</p>
-    <p><a href="https://www.iana.org/domains/example">More information...</a></p>
+ <p> Have questions? I have answers.</p>
+
+<p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
 </div>
+
+<footer>
+  <p>made by <a href="#"> kisahklasik</a> ♡
+</footer>
 </body>
 </html>
