--- a/contoh.html
+++ b/contoh.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/main.css">
     <style type="text/css">
-    @import url(https://fonts.googleapis.com/css?family=Lato:400,700);
         html {
             display: grid;
             min-height: 100%
