--- a/contoh.html
+++ b/contoh.html
@@ -20,7 +20,7 @@
             margin: auto;
             overflow: hidden;
             width: 600px;
-        //    height: 550px
+            height: 550px
         }
         footer {
             position: absolute;
