--- a/contoh.html
+++ b/contoh.html
@@ -19,8 +19,8 @@
             position: relative;
             margin: auto;
             overflow: hidden;
-            width: 600px;
-            height: 550px
+            width: 100%;
+         //   height: 550px
         }
         footer {
             position: absolute;
