--- a/contoh.html
+++ b/contoh.html
@@ -21,6 +21,8 @@
             overflow: hidden;
             width: 100%;
          /*  height: 550px */
+            margin: 5em auto;
+            padding: 2em;
         }
         footer {
             position: absolute;
