--- a/contoh.html
+++ b/contoh.html
@@ -17,10 +17,8 @@
         }
         .container {
             position: relative;
-            margin: auto;
             overflow: hidden;
-            width: 100%;
-         /*  height: 550px */
+            width: 600px;
             margin: 5em auto;
             padding: 2em;
         }
