--- a/contoh.html
+++ b/contoh.html
@@ -41,6 +41,12 @@
         footer a:hover{
             color: #7d7d7d
         }
+        @media (max-width: 700px) {
+        .container {
+            margin: 0 auto;
+            width: auto;
+        }
+    }
     </style>    
 </head>
 
