--- a/contoh.html
+++ b/contoh.html
@@ -48,6 +48,9 @@
         }
     }
     </style>    
+
+    <script src="src/js/app.js"></script>
+    <script src="src/js/index.js"></script>
 </head>
 
 <body>
