--- a/contoh.html
+++ b/contoh.html
@@ -7,6 +7,10 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/main.css">
+
+    <link rel="canonical" href="https://bera.pages.dev/" />
+    <link rel="icon" href="favicon.ico">
+    
     <style type="text/css">
         html {
             display: grid;
