--- a/contoh.html
+++ b/contoh.html
@@ -10,54 +10,16 @@
 
     <link rel="canonical" href="https://bera.pages.dev/" />
     <link rel="icon" href="favicon.ico">
-    
-    <style type="text/css">
-        html {
-            display: grid;
-            min-height: 100%
-        }
-        body {
-            display: grid
-        }
-        .container {
-            position: relative;
-            overflow: hidden;
-            width: 600px;
-            margin: 5em auto;
-            padding: 2em;
-        }
-        footer {
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            text-transform: uppercase;
-            padding: 10px;
-            font-family: Lato,sans-serif
-        }
-        footer p {
-            letter-spacing: 3px;
-            font-size: 10px
-        }
-        footer a {
-            color: #aaa;
-            text-decoration: none
-        }
-        footer a:hover{
-            color: #7d7d7d
-        }
-        @media (max-width: 700px) {
-        .container {
-            margin: 0 auto;
-            width: auto;
-        }
-    }
-    </style>    
 
     <script src="src/js/app.js"></script>
     <script src="src/js/index.js"></script>
 </head>
 
 <body>
+<div id="preloader">
+<div id="status">&nbsp;</div>
+</div>
+    
 <div class="container">
  <p> Have questions? I have answers.</p>
 
