--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 <div id="app"></div>
 <p><em><strong>Bagikan</strong></em> Twibbon app ini ke media sosial Anda.</p>
 <p class="result"></p>
-    
+<p>
+<textarea id="output"></textarea> 
+<button id="paste">Paste</button>
+</p> 
 </div> <!-- container -->
 
 <footer>
