--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 <p><em><strong>Bagikan</strong></em> Twibbon app ini ke media sosial Anda.</p>
 <p class="result"></p>
 <p>
-<textarea id="output"></textarea> 
+<textarea id="output">
+Twibbon App adalah sebuah bingkai foto yang dibuat dan didesain sedemikian rupa dalam berbagai jenis dan ukuran, sering digunakan sebagai tanda keikutsertaan sebuah acara, dukungan, promosi, dan bentuk lainnya.
+</textarea> 
 <button id="paste">Paste</button>
 </p> 
 </div> <!-- container -->
