--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </footer>
 
 <script src="src/js/share.js"></script>
-<script src=""></script>
+<script src="src/js/copy.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script>
 $(window).on('load', function() { // makes sure the whole site is loaded 
