--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </div> <!-- container -->
 
 <footer>
-<p class="credit">made by <a href="https://github.com/kisahklasik"> Ferry Ayunda</a> ♡
+<p class="credit">made by <a href="https://github.com/kisahklasik"> Ferry Ayunda</a>
 </footer>
 
 <script src="src/js/share.js"></script>
