--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
 <div id="app"></div>
 <p><em><strong>Bagikan</strong></em> Twibbon app ini ke media sosial Anda.</p>
 <p class="result"></p>
-
+<blockquote>
+<p id="quote">
+Manusia akan bahagia selama ia memilih untuk bahagia.
+</p>
+<p>
+--<span id="by">Alexander Solzhenitsyn</span>
+</p>
+</blockquote>
+    
 </div> <!-- container -->
 
 <footer>
