--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ $('body').delay(350).css({'overflow':'visible'});
 </script>
 <script>
     let quotes = [];
-    let url = 'https://cdn.statically.io/gh/lakuapik/quotes-indonesia/master/raw/quotes.min.json';
+    let url = 'https://bera.pages.dev/config/quotes.json';
     function updateQuote() {
       const random = Math.floor(Math.random() * quotes.length);
       const quote = quotes[random];
