--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 <blockquote>
 <p id="quote">
 Manusia akan bahagia selama ia memilih untuk bahagia.
-</p>
-<p>
---<span id="by">Alexander Solzhenitsyn</span>
+<br>
+--<cite><span id="by">Alexander Solzhenitsyn</span></cite>
 </p>
 </blockquote>
     
