--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 <blockquote>
 <p id="quote">
 Manusia akan bahagia selama ia memilih untuk bahagia.
-<br>
---<cite><span id="by">Alexander Solzhenitsyn</span></cite>
+</p>
+<p>
+--<cite id="by">Alexander Solzhenitsyn</cite>
 </p>
 </blockquote>
     
