--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 </p>
 </blockquote>
 <p>
---<cite id="by">Alexander Solzhenitsyn</cite>
+—<cite id="by">Alexander Solzhenitsyn</cite>
 </p>
     
 </div> <!-- container -->
