--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 
 <script src="src/js/share.js"></script>
 <script src="src/js/copy.js"></script>
+<script src="src/js/quotes.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script>
 $(window).on('load', function() { // makes sure the whole site is loaded 
