--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 <p>
 —<cite id="by">Alexander Solzhenitsyn</cite>
 </p>
-    
+
+<audio src="/music.mp3" autoplay></audio>
+
 </div> <!-- container -->
 
 <footer>
