--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@ $('#preloader').delay(350).fadeOut('slow'); // will fade out the white DIV that 
 $('body').delay(350).css({'overflow':'visible'});
 })
 </script>
+<script>
+audioElement.play();
+</script>
 </body>
 </html>
