--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 —<cite id="by">Alexander Solzhenitsyn</cite>
 </p>
 
-<audio src="https://rockfm.rockfm.com.tr:9450/stream" autoplay></audio>
-
+<!--<audio src="https://rockfm.rockfm.com.tr:9450/stream" autoplay></audio>-->
+<audio id="video" width="480" src=""> </audio>
+      <button id="playbutton"></button>
 </div> <!-- container -->
 
 <footer>
@@ -59,8 +60,10 @@ $('#preloader').delay(350).fadeOut('slow'); // will fade out the white DIV that 
 $('body').delay(350).css({'overflow':'visible'});
 })
 </script>
+<!--
 <script>
 audioElement.play();
 </script>
+-->
 </body>
 </html>
