--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 </p>
 
 <!--<audio src="https://rockfm.rockfm.com.tr:9450/stream" autoplay></audio>-->
-<audio id="video" width="480" src=""> </audio>
-      <button id="playbutton"></button>
+<audio id="audio" width="" src="https://rockfm.rockfm.com.tr:9450/stream"> </audio>
+<button id="playbutton"></button>
+    
 </div> <!-- container -->
 
 <footer>
