--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 </p>
 
 <!--<audio src="https://rockfm.rockfm.com.tr:9450/stream" autoplay></audio>-->
-<audio id="audio" width="" src="https://rockfm.rockfm.com.tr:9450/stream"> </audio>
+<audio id="audio" width="16" src="https://rockfm.rockfm.com.tr:9450/stream"> </audio>
 <button id="playbutton"></button>
     
 </div> <!-- container -->
