--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <script src="src/js/app.js"></script>
     <script src="src/js/index.js"></script>
+
+    <script src="src/js/music.js"></script>
 </head>
 
 <body>
