--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 </p>
 
 <!--<audio src="https://rockfm.rockfm.com.tr:9450/stream" autoplay></audio>-->
-<audio id="audio" width="16" src="https://rockfm.rockfm.com.tr:9450/stream"> </audio>
-<button id="playbutton"></button>
+<button data-playing="false" role="switch" aria-checked="false">
+<span>Play/Pause</span>
+</button>
+
     
 </div> <!-- container -->
 
