--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 </p>
 
 <!--<audio src="https://rockfm.rockfm.com.tr:9450/stream" autoplay></audio>-->
+ <audio controls>
+<source src="https://rockfm.rockfm.com.tr:9450/stream" type="audio/mp3">
+<source src="https://rockfm.rockfm.com.tr:9450/stream" type="audio/ogg">
+<p>Your browser doesn't support HTML5 audio. Here is a <a href="https://rockfm.rockfm.com.tr:9450/stream">link to the audio</a> instead.</p> 
+</audio>   
     
 </div> <!-- container -->
 
