--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 </audio>
 
 <!-- custom play and pause buttons -->
-<button id="play">play</button>
-<button id="pause">pause</button>
+<button class="gray" id="play">play</button>
+<button class="gray" id="pause">pause</button>
 
     
 </div> <!-- container -->
