--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="src/js/app.js"></script>
     <script src="src/js/index.js"></script>
 
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
