--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 </audio>
 
 <!-- custom play and pause buttons -->
-<button class="gray" id="play"><i style='font-size:24px' class='far'>&#xf144;</i></button>
+<button class="gray" id="play"><i class='far fa-play-circle'></i></button>
 <button class="gray" id="pause">pause</button>
 
     
