--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 
 <!-- custom play and pause buttons -->
 <button class="gray" id="play"><i class='far fa-play-circle'></i></button>
-<button class="gray" id="pause">pause</button>
+<button class="gray" id="pause"><i class='far fa-pause-circle'></i></button>
 
     
 </div> <!-- container -->
