--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <meta property="og:image" content="https://bera.pages.dev/og.png" />
     
     <link rel="stylesheet" href="css/main.css">
-
+    <style>
+    .play, .pause {margin:0 auto 2em auto;text-align:center}
+    </style>
+    
     <link rel="canonical" href="https://bera.pages.dev/" />
     <link rel="icon" href="favicon.ico">
 
