--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 </audio>
 
 <!-- custom play and pause buttons -->
-<button class="gray" id="play"><i class='far fa-play-circle'></i></button>
+<button class="play" id="play"><i class='far fa-play-circle'></i></button>
 <button class="gray" id="pause"><i class='far fa-pause-circle'></i></button>
 
     
