--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 </audio>
 
 <!-- custom play and pause buttons -->
-<p> <span class="play" id="play"><i class='far fa-play-circle'></i></span></p>
-<button class="gray" id="pause"><i class='far fa-pause-circle'></i></button>
+<p>
+<span class="play" id="play"><i class='far fa-play-circle'></i></span>
+<span class="pause" id="pause"><i class='far fa-pause-circle'></i></span>
+</p>
 
     
 </div> <!-- container -->
