--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <link rel="stylesheet" href="css/main.css">
     <style>
-    .play, .pause {margin:0 auto 2em auto;text-align:center}
+    .play, .pause {margin:0 auto 2em auto;text-align:center;padding:1em}
     </style>
     
     <link rel="canonical" href="https://bera.pages.dev/" />
