--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     
     <link rel="stylesheet" href="css/main.css">
     <style>
-    .play, .pause {margin:0 auto 2em auto;padding:1px}
+    .play {margin:0 auto 2em auto;padding:1px}
+    .pause {margin:0 auto 2em auto;padding:1px}
     </style>
     
     <link rel="canonical" href="https://bera.pages.dev/" />
