--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="container">
 <!-- custom play and pause buttons -->
 <p align="right">
-<span class="play" id="play"><i class='far fa-play-circle'></i></span>
+<span class="play" id="play"><i class='far fa-play-circle'></i></span>&nbsp;
 <span class="pause" id="pause"><i class='far fa-pause-circle'></i></span>
 </p>
     
