--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 </p>
 
 <!--<audio src="https://rockfm.rockfm.com.tr:9450/stream" autoplay></audio>-->
+<!--
 <audio id="my-audio">
 <source src="https://rockfm.rockfm.com.tr:9450/stream" type="audio/mpeg" />
 <source src="https://rockfm.rockfm.com.tr:9450/stream" type="audio/ogg" />
 <!-- place fallback here as <audio> supporting browsers will ignore it -->
 <p>Download <a href="https://rockfm.rockfm.com.tr:9450/stream">audiofile.mp3</a></p>
 </audio>
-
+-->
     
 </div> <!-- container -->
 
@@ -68,7 +69,7 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 <script src="src/js/share.js"></script>
 <script src="src/js/copy.js"></script>
 <script src="src/js/quotes.js"></script>
-<script src="src/js/music.js"></script>
+<script src="src/js/audio.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
 <script>
