--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 <div class="container">
 <!-- custom play and pause buttons -->
 <p align="right">
-<span class="play" id="play"><i class='far fa-play-circle'></i></span>&nbsp;
-<span class="pause" id="pause"><i class='far fa-pause-circle'></i></span>
+<span type="button" class="play" id="play"><i class='far fa-play-circle'></i></span>&nbsp;
+<!--<span class="pause" id="pause"><i class='far fa-pause-circle'></i></span>-->
 </p>
     
 <p>Twibbon App adalah sebuah bingkai foto yang dibuat dan didesain sedemikian rupa dalam berbagai jenis dan ukuran, sering digunakan sebagai tanda keikutsertaan sebuah acara, dukungan, promosi, dan bentuk lainnya.</p>
