--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 <div class="container">
 <!-- custom play and pause buttons -->
 <p align="right">
-<span type="button" class="play" id="play"><i class='far fa-play-circle'></i></span>&nbsp;
+<button>▶️</button>
+<input type="range" value="0" min="0" max="100" step="1">
+
+<!--<span class="play" id="play"><i class='far fa-play-circle'></i></span>&nbsp;-->
 <!--<span class="pause" id="pause"><i class='far fa-pause-circle'></i></span>-->
 </p>
     
@@ -55,7 +58,7 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 <audio id="my-audio">
 <source src="https://rockfm.rockfm.com.tr:9450/stream" type="audio/mpeg" />
 <source src="https://rockfm.rockfm.com.tr:9450/stream" type="audio/ogg" />
-<!-- place fallback here as <audio> supporting browsers will ignore it -->
+ place fallback here as <audio> supporting browsers will ignore it 
 <p>Download <a href="https://rockfm.rockfm.com.tr:9450/stream">audiofile.mp3</a></p>
 </audio>
 -->
