--- a/index.html
+++ b/index.html
@@ -32,11 +32,8 @@
 <div class="container">
 <!-- custom play and pause buttons -->
 <p align="right">
-<button>▶️</button>
-<input type="range" value="0" min="0" max="100" step="1">
-
-<!--<span class="play" id="play"><i class='far fa-play-circle'></i></span>&nbsp;-->
-<!--<span class="pause" id="pause"><i class='far fa-pause-circle'></i></span>-->
+<span class="play" id="play"><i class='far fa-play-circle'></i></span>&nbsp;
+<span class="pause" id="pause"><i class='far fa-pause-circle'></i></span>
 </p>
     
 <p>Twibbon App adalah sebuah bingkai foto yang dibuat dan didesain sedemikian rupa dalam berbagai jenis dan ukuran, sering digunakan sebagai tanda keikutsertaan sebuah acara, dukungan, promosi, dan bentuk lainnya.</p>
@@ -54,14 +51,13 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 </p>
 
 <!--<audio src="https://rockfm.rockfm.com.tr:9450/stream" autoplay></audio>-->
-<!--
+
 <audio id="my-audio">
 <source src="https://rockfm.rockfm.com.tr:9450/stream" type="audio/mpeg" />
 <source src="https://rockfm.rockfm.com.tr:9450/stream" type="audio/ogg" />
- place fallback here as <audio> supporting browsers will ignore it 
+<!-- place fallback here as <audio> supporting browsers will ignore it -->
 <p>Download <a href="https://rockfm.rockfm.com.tr:9450/stream">audiofile.mp3</a></p>
 </audio>
--->
     
 </div> <!-- container -->
 
@@ -72,7 +68,7 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 <script src="src/js/share.js"></script>
 <script src="src/js/copy.js"></script>
 <script src="src/js/quotes.js"></script>
-<script src="src/js/audio.js"></script>
+<script src="src/js/music.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
 <script>
