--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <link rel="stylesheet" href="css/main.css">
     <style>
-    .play, .pause {margin:0 auto 2em auto;}
+    .play, .pause {margin:0 auto 2em auto;background-color: #e7e7e7;}
     </style>
     
     <link rel="canonical" href="https://bera.pages.dev/" />
