--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <link rel="stylesheet" href="css/main.css">
     <style>
-    .play, .pause {margin: 4px 2px;padding: 10px 22px;text-align: center;}
+    .play, .pause {margin: 4px 2px;padding: 5px;text-align: center;}
     </style>
     
     <link rel="canonical" href="https://bera.pages.dev/" />
