--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <span class="play" id="play"><i class='far fa-play-circle'></i></span>
 <span class="pause" id="pause"><i class='far fa-pause-circle'></i></span>
 </p>
-    
+<h1>TWIBBON APP</h1>  
 <p>Twibbon App adalah sebuah bingkai foto yang dibuat dan didesain sedemikian rupa dalam berbagai jenis dan ukuran, sering digunakan sebagai tanda keikutsertaan sebuah acara, dukungan, promosi, dan bentuk lainnya.</p>
 <div id="app"></div>
 <p><em><strong>Bagikan</strong></em> Twibbon app ini ke media sosial Anda.</p>
