--- a/demo.html
+++ b/demo.html
@@ -49,8 +49,7 @@
 
   </article>
   <footer>
-  <p><a target="_blank" rel="noopener" href="https://github.com/remy/mit-license">Fork this project to create your own
-      MIT license that you can always link to.</a></p>
+  <p><a target="_blank" rel="noopener" href="#">Copyright © 2024 Demos.</a></p>
 </footer>
 
 </body>
