--- a/demo.html
+++ b/demo.html
@@ -9,6 +9,19 @@
     content="The MIT License is a permissive free software license originating at the Massachusetts Institute of Technology. As a permissive license, it puts only very limited restriction on reuse and has, therefore, an excellent license compatibility.">
 
   <link rel="stylesheet" href="css/default.css">
+
+  <style>
+  .play, .pause {margin: 4px 2px;padding: 4px;text-align: center;}
+  </style>
+    
+  <link rel="canonical" href="https://bera.pages.dev/" />
+  <link rel="icon" href="favicon.ico">
+
+  <script src="src/js/app.js"></script>
+  <script src="src/js/index.js"></script>
+
+  <script src="https://kit.fontawesome.com/e3785c11d7.js" crossorigin="anonymous"></script>
+
 </head>
 
 
