--- a/demo.html
+++ b/demo.html
@@ -26,16 +26,36 @@
 
 
 <body>
-  <article>
+<article>
     
-    <h1>Example Domain</h1>
-    <p>This domain is for use in illustrative examples in documents. You may use this
-    domain in literature without prior coordination or asking for permission.</p>
-    <p><a href="https://www.iana.org/domains/example">More information...</a></p>
+<p align="right">
+<span class="play" id="play"><i class='far fa-play-circle'></i></span>
+<span class="pause" id="pause"><i class='far fa-pause-circle'></i></span>
+</p>
+<h1>TWIBBON APP</h1>  
+<p>Twibbon App adalah sebuah bingkai foto yang dibuat dan didesain sedemikian rupa dalam berbagai jenis dan ukuran, sering digunakan sebagai tanda keikutsertaan sebuah acara, dukungan, promosi, dan bentuk lainnya.</p>
+<div id="app"></div>
+<p><em><strong>Bagikan</strong></em> Twibbon app ini ke media sosial Anda.</p>
+<p class="result"></p>
+<hr />
+<blockquote>
+<p id="quote">
+Manusia akan bahagia selama ia memilih untuk bahagia.
+</p>
+</blockquote>
+<p>
+—<cite id="by">Alexander Solzhenitsyn</cite>
+</p>
 
-  </article>
-  <footer>
-  <p><a target="_blank" rel="noopener" href="#">Copyright © 2024 Demos.</a></p>
+<audio id="my-audio">
+<source src="https://rockfm.rockfm.com.tr:9450/stream" type="audio/mpeg" />
+<source src="https://rockfm.rockfm.com.tr:9450/stream" type="audio/ogg" />
+<!-- place fallback here as <audio> supporting browsers will ignore it -->
+<p>Download <a href="https://rockfm.rockfm.com.tr:9450/stream">audiofile.mp3</a></p>
+</audio>
+</article>
+<footer>
+<p><a target="_blank" rel="noopener" href="#">Copyright © 2024 Demos.</a></p>
 </footer>
 
 </body>
