--- a/demo.html
+++ b/demo.html
@@ -54,10 +54,24 @@ Manusia akan bahagia selama ia memilih untuk bahagia.
 <p>Download <a href="https://rockfm.rockfm.com.tr:9450/stream">audiofile.mp3</a></p>
 </audio>
 </article>
+  
 <footer>
 <p><a target="_blank" rel="noopener" href="#">Copyright © 2024 Demos.</a></p>
 </footer>
 
-</body>
+<script src="src/js/share.js"></script>
+<script src="src/js/copy.js"></script>
+<script src="src/js/quotes.js"></script>
+<script src="src/js/music.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
+<script>
+$(window).on('load', function() { // makes sure the whole site is loaded 
+$('#status').fadeOut(); // will first fade out the loading animation 
+$('#preloader').delay(350).fadeOut('slow'); // will fade out the white DIV that covers the website. 
+$('body').delay(350).css({'overflow':'visible'});
+})
+</script>
+  
+</body>
 </html>
