--- a/demo.html
+++ b/demo.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html id="home" lang="en">
 <head>
-  <title>MIT License</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description"
+<title>MIT License</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta name="description"
     content="The MIT License is a permissive free software license originating at the Massachusetts Institute of Technology. As a permissive license, it puts only very limited restriction on reuse and has, therefore, an excellent license compatibility.">
 
-  <link rel="stylesheet" href="css/default.css">
+<link rel="stylesheet" href="css/default.css">
 
-  <style>
-  .play, .pause {margin: 4px 2px;padding: 4px;text-align: center;}
-  </style>
+<style>
+.play, .pause {margin: 4px 2px;padding: 4px;text-align: center;}
+</style>
     
-  <link rel="canonical" href="https://bera.pages.dev/" />
-  <link rel="icon" href="favicon.ico">
+<link rel="canonical" href="https://bera.pages.dev/" />
+<link rel="icon" href="favicon.ico">
 
-  <script src="src/js/app.js"></script>
-  <script src="src/js/index.js"></script>
+<script src="src/js/app.js"></script>
+<script src="src/js/index.js"></script>
 
-  <script src="https://kit.fontawesome.com/e3785c11d7.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/e3785c11d7.js" crossorigin="anonymous"></script>
 
 </head>
 
 
 <body>
+<div id="preloader">
+<div id="status">&nbsp;</div>
+</div>
+  
 <article>
     
 <p align="right">
