--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="canonical" href="https://bera.pages.dev/" />
     <link rel="icon" href="favicon.ico">
 
+    <link rel="manifest" href="manifest.json">
+    <script type='text/javascript' src="js/main.js"></script>
     <script src="src/js/app.js"></script>
     <script src="src/js/index.js"></script>
 
