--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="icon" href="favicon.ico">
 
     <link rel="manifest" href="manifest.json">
-    <script type='text/javascript' src="js/main.js"></script>
+    <script src="src/js/main.js"></script>
     <script src="src/js/app.js"></script>
     <script src="src/js/index.js"></script>
 
